# bwa-neo

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README-BWA-NEO.md  README-alt.md  README.md  SECURITY.md  bwa.1  bwase.c  design.md  neo.time  requirements.md  tasks.md
.agents/skills/seqera/: SKILL.md
.claude/skills/seqera/: SKILL.md
.cursor/rules/: seqera-ai.mdc
.cursor/skills/: bwa-neo-cloud-runbook.md
.cursor/skills/seqera/: SKILL.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
benchmarks/: README.md  pixi.toml  publication_draft.md  skills-lock.json
benchmarks/.agents/skills/pixi/: SKILL.md
benchmarks/.agents/skills/pixi/assets/: pixi.toml.template
benchmarks/.agents/skills/pixi/references/: cli-reference.md
benchmarks/.agents/skills/pixi/scripts/: check_pixi.sh
benchmarks/.simulators/: pygargammel
benchmarks/at_scale/: Makefile  README.md  pixi.toml  publication_draft.md
benchmarks/at_scale/.agents/skills/pixi/references/: examples.md  features-guide.md
benchmarks/at_scale/.agents/skills/pixi/scripts/: pixi_info.py
benchmarks/at_scale/assets/: no_parity.txt
benchmarks/at_scale/nextflow/: main.nf  nextflow.config
benchmarks/at_scale/nextflow/modules/: aggregate_metrics.nf  merge_ancient.nf  simulate_ancient.nf
benchmarks/at_scale/nextflow/plot/: publication_plots.py
benchmarks/at_scale/scripts/: pixi_bench.sh  pixi_build_bwa_neo.sh  write_publication_manifest.py
benchmarks/nextflow/: nextflow.config
benchmarks/nextflow/modules/: bench_ancient.nf  bench_modern.nf  parity_modern.nf  render_publication_assets.nf  simulate_modern.nf
benchmarks/refbias/: Makefile  README.md
benchmarks/scripts/: pixi_build_bwa_neo.sh
benchmarks/tmp_test_modern/: modern_r1.fq  modern_ref.fa  modern_ref.fa.amb  modern_ref.fa.ann  modern_ref.fa.bwt  modern_ref.fa.pac  modern_ref.fa.sa  neo.sam  neo.time  neo2.sam
bwakit/: README.md  run-HLA  run-bwamem  typeHLA.sh
cmake/: BwaMem2.cmake
docs/: BWA-NEO.md  DEVELOPMENT.md  NEWS.md  README-alt.md  SEQERA_AI.md  UPSTREAM_TRIAGE.md  USAGE.md  design.md  requirements.md  tasks.md
docs/wiki-wip/: Architecture-and-scope.md  Benchmarks-and-research.md  Build-and-test.md  Contributing-and-agents.md  GAP_REPORT.md  Home.md  LINK_CHECK_RESULTS.md  LINK_GRAPH.md  README.md  Security-licence-and-conduct.md  Usage-and-features.md  WIKI_PUBLISH_STATUS.md  _Footer.md  _Sidebar.md  inventory.json
include/bwa/: bwa_aux.h  bwtaln.h
man/: bwa.1
scripts/: bootstrap-git.sh  check-seqera-ai.sh  fetch-bwa-mem2.sh  init-git.sh  install-seqera-ai.sh  publish-wiki-from-staging.sh
src/backtrack/: bwape.c  bwase.c
src/cli/: bwa_postalt.c  bwa_qualfa2fq.c  bwa_typehla.c  bwa_typehla_selctg.c  bwa_xa2multi.c  main.c
src/mem2/: README.md
tests/: CMakeLists.txt  README.md  cli_aux.sh  golden_sam.sh  golden_sampe.sh  small_bam.sh  smoke_align.sh  test_unit.cpp
tests/fixtures/cli_aux/: expected_qualfa.fq  expected_selctg.txt  expected_typehla.gt  hla_ctg.sam  hla_exons.bed  tiny.fa  tiny.qual  tiny_aln.sam  tiny_alt.sam  typehla_exon_to_contig.sam  xa_expected.sam  xa_in.sam
tests/fixtures/tiny/: expected.r1.first11.tsv  reads.fq  ref.fa
tests/fixtures/tiny_pe/: expected.pair.first11.tsv
